(chore) customize my starting profile